creative expandable card effect

--- a/index.html
+++ b/index.html
@@ -28,72 +28,55 @@
 
       .card {
         position: relative;
-        width: 320px;
-        padding: 40px;
-        background-color: white;
-        box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-        overflow: hidden;
+        padding: 20px 40px;
+        width: 300px;
+        height: 260px;
+        border-radius: 10px;
+        box-shadow: 0px 5px 20px rgba(0,0,0,0.5);
+        transition: .3s;
       }
 
-      .card:before {
-        content: "";
-        position: absolute;
-        left: 0;
-        bottom: calc(-100% + 5px);
+      .imgbox {
+        position: relative;
         width: 100%;
         height: 100%;
-        background-color: #ff56ac;
+        transform: translateY(-60px);
         z-index: 1;
-        transition: .5s;
       }
 
-      .card:hover::before {
-        bottom: 0;
+      img {
+        width: 100%;
+        border-radius: 10px;
+      }
+
+      .card:hover {
+        height: 420px;
       }
 
       .content {
-        position: relative;
-        text-transform: capitalize;
-        color: #777;
-        z-index: 2;
-        transition: .5s;
-      }
-
-      h2 {
-        margin-bottom: 10px;
-        margin-top: 0px;
-        font-size: 30px;
-      }
-
-      p {
-        font-size: 18px;
-      }
-
-      a {
-        margin-top: 10px;
-        font-size: 14px;
-        display: inline-block;
-        text-decoration: none;
-        color: #777;
-        padding: 6px 10px;
-        font-weight: 600;
-        background-color: white;
-        box-shadow: 0 2px 20px rgba(0,0,0,0.05);
+        padding: 10px 20px;
+        text-align: center;
+        color: #111;
+        opacity: 0;
+        transform: translateY(-500px);
+        transition: .3s;
       }
 
       .card:hover .content {
-        color: white;
+        opacity: 1;
+        transform: translateY(-200px);
       }
-
 
     </style>
   </head>
   <body>
     <div class="card">
+        <div class="imgbox">
+            <img src="img/kitten.jpg">
+        </div>
         <div class="content">
-            <h2>design</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas quisquam et, fuga error quod aliquam magnam dolores architecto eaque officia saepe amet nihil praesentium voluptatum dolorum earum enim molestiae iusto.</p>
-            <a href="#">read more</a>
+            <h2>card hover</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed doloribus dolores eaque nihil porro facilis. Earum esse et nostrum vero </p>
         </div>
     </div>
   </body>
