--- a/index.html
+++ b/index.html
@@ -28,56 +28,66 @@
 
       .card {
         position: relative;
-        padding: 20px 40px;
-        width: 300px;
-        height: 260px;
-        border-radius: 10px;
-        box-shadow: 0px 5px 20px rgba(0,0,0,0.5);
-        transition: .3s;
-      }
-
-      .imgbox {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        transform: translateY(-60px);
-        z-index: 1;
+        width: 500px;
+        height: 300px;
+        display: flex;
+        align-items: center;
+        background: linear-gradient(45deg, #d41e31, #491f8f);
+        border-radius: 20px;
       }
 
       img {
-        width: 100%;
-        border-radius: 10px;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        height: 400px;
+        transition: .5s;
       }
 
-      .card:hover {
-        height: 420px;
+      .card:hover img {
+        height: 450px;
+        left: 78%;
       }
 
       .content {
-        padding: 10px 20px;
-        text-align: center;
-        color: #111;
+        position: relative;
+        width: 40%;
+        left: 20%;
+        color: white;
+        text-transform: capitalize;
         opacity: 0;
-        transform: translateY(-500px);
-        transition: .3s;
+        transition: .5s;
       }
 
-      .card:hover .content {
+      .card:hover .content{
+        left: 5%;
         opacity: 1;
-        transform: translateY(-200px);
       }
 
+      p {
+        margin-bottom: 20px;
+      }
+
+      a {
+        position: relative;
+        display: inline-block;
+        color: #111;
+        padding: 5px 10px;
+        background-color: #fff;
+        text-decoration: none;
+        border-radius: 10px;
+      }
     </style>
   </head>
   <body>
     <div class="card">
-        <div class="imgbox">
-            <img src="img/kitten.jpg">
-        </div>
         <div class="content">
-            <h2>card hover</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed doloribus dolores eaque nihil porro facilis. Earum esse et nostrum vero </p>
+            <h2>captain marvel</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum optio aperiam, et neque obcaecati voluptas.</p>
+            <a href="#">read more</a>
         </div>
+        <img src="img/captain-marvel.png">
     </div>
   </body>
 </html>
