--- a/index.html
+++ b/index.html
@@ -24,70 +24,104 @@
         justify-content: center;
         align-items: center;
         font-family: "Raleway", sans-serif;
+        background-color: lightblue;
       }
 
       .card {
         position: relative;
-        width: 500px;
-        height: 300px;
-        display: flex;
-        align-items: center;
-        background: linear-gradient(45deg, #d41e31, #491f8f);
-        border-radius: 20px;
+        width: 300px;
+        height: 400px;
+        background-color: white;
+        transition: 0.5s;
       }
 
-      img {
+      .card:hover {
+        box-sizing: 0 30px 50px rgba(0, 0, 0, 0.2);
+      }
+
+      .face {
         position: absolute;
-        bottom: 0;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .face1 {
+        padding: 20px;
+        text-align: center;
+        background-color: white;
+        color: #013d4a;
+      }
+
+      .face1 h2 {
+        margin-top: 80px;
+      }
+
+      .face1 a {
+        display: inline-block;
+        margin-top: 20px;
+        padding: 5px 10px;
+        text-decoration: none;
+        color: #013d4a;
+        border: 2px solid #013d4a;
+        text-transform: uppercase;
+        font-weight: bold;
+        transition: 0.3s;
+      }
+
+      .face2 {
+        background-color: #013d4a;
+        transition: 0.5s;
+      }
+
+      .face2 h2 {
+        font-size: 120px;
+        color: white;
+        transition: 0.5s;
+      }
+
+      .card:hover .face2 {
+        height: 80px;
+        width: 80px;
+        border-radius: 50%;
+        top: 40px;
         left: 50%;
         transform: translateX(-50%);
-        height: 400px;
-        transition: .5s;
+        background-color: transparent;
+        border: 2px solid #013d4a;
       }
 
-      .card:hover img {
-        height: 450px;
-        left: 78%;
+      .card:hover .face2 h2 {
+        font-size: 32px;
+        color: #013d4a;
       }
 
-      .content {
-        position: relative;
-        width: 40%;
-        left: 20%;
+      a:hover {
+        background-color: #013d4a;
         color: white;
-        text-transform: capitalize;
-        opacity: 0;
-        transition: .5s;
-      }
-
-      .card:hover .content{
-        left: 5%;
-        opacity: 1;
-      }
-
-      p {
-        margin-bottom: 20px;
-      }
-
-      a {
-        position: relative;
-        display: inline-block;
-        color: #111;
-        padding: 5px 10px;
-        background-color: #fff;
-        text-decoration: none;
-        border-radius: 10px;
       }
     </style>
   </head>
   <body>
     <div class="card">
+      <div class="face face1">
         <div class="content">
-            <h2>captain marvel</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum optio aperiam, et neque obcaecati voluptas.</p>
-            <a href="#">read more</a>
+          <h2>services</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore
+            eius veniam sapiente voluptas maiores blanditiis!
+          </p>
+          <a href="#">read more</a>
         </div>
-        <img src="img/captain-marvel.png">
+      </div>
+
+      <div class="face face2">
+        <h2>88</h2>
+      </div>
     </div>
   </body>
 </html>
