--- a/index.html
+++ b/index.html
@@ -24,104 +24,117 @@
         justify-content: center;
         align-items: center;
         font-family: "Raleway", sans-serif;
-        background-color: lightblue;
+        background-color: #333;
       }
 
       .card {
         position: relative;
+        cursor: pointer;
         width: 300px;
-        height: 400px;
-        background-color: white;
-        transition: 0.5s;
       }
 
-      .card:hover {
-        box-sizing: 0 30px 50px rgba(0, 0, 0, 0.2);
-      }
-
-      .face {
-        position: absolute;
-        top: 0;
-        left: 0;
+      figure {
         width: 100%;
         height: 100%;
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
+      }
+
+      img {
+        width: 200px;
+        height: 120px;
+        object-fit: cover;
       }
 
       .face1 {
-        padding: 20px;
         text-align: center;
-        background-color: white;
-        color: #013d4a;
-      }
-
-      .face1 h2 {
-        margin-top: 80px;
-      }
-
-      .face1 a {
-        display: inline-block;
-        margin-top: 20px;
-        padding: 5px 10px;
-        text-decoration: none;
-        color: #013d4a;
-        border: 2px solid #013d4a;
         text-transform: uppercase;
-        font-weight: bold;
-        transition: 0.3s;
+        position: relative;
+        width: 300px;
+        height: 200px;
+        background-color: #333;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        transition: .5s;
+        transform: translateY(100px);
+        z-index: 1;
       }
 
       .face2 {
-        background-color: #013d4a;
+        position: relative;
+        width: 300px;
+        height: 200px;
+        background-color: #fff;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
+        padding: 20px;
+        box-shadow: 0 20px 50px rgba(0,0,0,0.8);
         transition: 0.5s;
+        transform: translateY(-100px);
       }
 
-      .face2 h2 {
-        font-size: 120px;
-        color: white;
-        transition: 0.5s;
+      .card:hover .face1 {
+        background-color: #ff0057;
+        transform: translateY(0);
       }
 
       .card:hover .face2 {
-        height: 80px;
-        width: 80px;
-        border-radius: 50%;
-        top: 40px;
-        left: 50%;
-        transform: translateX(-50%);
-        background-color: transparent;
-        border: 2px solid #013d4a;
+        transform: translateY(0);
       }
 
-      .card:hover .face2 h2 {
-        font-size: 32px;
-        color: #013d4a;
+      .imgbox {
+        opacity: .2;
+        transition: .5s;
+      }
+
+      .card:hover .imgbox {
+        opacity: 1;
+      }
+
+      h3 {
+        color: white;
+        text-align: center;
+        font-size: 20px;
+      }
+
+      a {
+        margin: 15px 0 0;
+        display: inline-block;
+        text-decoration: none;
+        font-weight: 900;
+        color: #777;
+        padding: 5px;
+        border: 1px solid #777;
       }
 
       a:hover {
-        background-color: #013d4a;
+        background-color: #777;
         color: white;
       }
     </style>
   </head>
   <body>
-    <div class="card">
-      <div class="face face1">
-        <div class="content">
-          <h2>services</h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore
-            eius veniam sapiente voluptas maiores blanditiis!
-          </p>
-          <a href="#">read more</a>
-        </div>
-      </div>
 
-      <div class="face face2">
-        <h2>88</h2>
-      </div>
+    <div class="card">
+        <div class="face1">
+            <div class="imgbox">
+                <figure><img src="img/kitten.jpg" alt=""></figure>
+                <h3>design</h3>
+            </div>
+        </div>
+        <div class="face2">
+            <div class="content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus odio pariatur modi explicabo id maxime.</p>
+                <a href="#">read more</a>
+            </div>
+        </div>
     </div>
+
   </body>
 </html>
