--- a/index.html
+++ b/index.html
@@ -29,110 +29,93 @@
 
       .card {
         position: relative;
-        cursor: pointer;
-        width: 300px;
+        width: 320px;
+        height: 350px;
+        background: white;
+        border-radius: 4px;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.2);
       }
 
-      figure {
+      .card:before,
+      .card:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-      }
-
-      img {
-        width: 200px;
-        height: 120px;
-        object-fit: cover;
-      }
-
-      .face1 {
-        text-align: center;
-        text-transform: uppercase;
-        position: relative;
-        width: 300px;
-        height: 200px;
-        background-color: #333;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        border-radius: 3px;
+        background-color: white;
         transition: .5s;
-        transform: translateY(100px);
-        z-index: 1;
+        z-index: -1;
       }
 
-      .face2 {
-        position: relative;
-        width: 300px;
-        height: 200px;
-        background-color: #fff;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        box-sizing: border-box;
-        padding: 20px;
-        box-shadow: 0 20px 50px rgba(0,0,0,0.8);
-        transition: 0.5s;
-        transform: translateY(-100px);
-      }
+      .card:hover:before {
+        transform: rotate(20deg);
+        box-shadow: 0 2px 20px rgba(0,0,0,0.2);
+    }
 
-      .card:hover .face1 {
-        background-color: #ff0057;
-        transform: translateY(0);
-      }
-
-      .card:hover .face2 {
-        transform: translateY(0);
+    .card:hover:after {
+        transform: rotate(10deg);
+        box-shadow: 0 2px 20px rgba(0,0,0,0.2);
       }
 
       .imgbox {
-        opacity: .2;
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        bottom: 10px;
+        right: 10px;
+        background-color: #222;
         transition: .5s;
+        z-index: 2;
       }
 
       .card:hover .imgbox {
-        opacity: 1;
+        bottom: 80px;
       }
 
-      h3 {
-        color: white;
+      .details {
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        right: 10px;
+        height: 60px;
         text-align: center;
+      }
+
+      h2 {
+        font-weight: 600;
         font-size: 20px;
-      }
-
-      a {
-        margin: 15px 0 0;
-        display: inline-block;
-        text-decoration: none;
-        font-weight: 900;
         color: #777;
-        padding: 5px;
-        border: 1px solid #777;
+        text-transform: uppercase;
       }
 
-      a:hover {
-        background-color: #777;
-        color: white;
+      h2 span {
+        font-weight: 500;
+        font-size: 16px;
+        color: #f38695;
       }
+
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
     </style>
   </head>
   <body>
 
     <div class="card">
-        <div class="face1">
-            <div class="imgbox">
-                <figure><img src="img/kitten.jpg" alt=""></figure>
-                <h3>design</h3>
-            </div>
+        <div class="imgbox">
+            <img src="img/kitten.jpg">
         </div>
-        <div class="face2">
-            <div class="content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus odio pariatur modi explicabo id maxime.</p>
-                <a href="#">read more</a>
-            </div>
+        <div class="details">
+            <h2>john doe<br><span>founder</span></h2>
         </div>
     </div>
 
