--- a/index.html
+++ b/index.html
@@ -24,86 +24,79 @@
         justify-content: center;
         align-items: center;
         font-family: "Raleway", sans-serif;
-        background-color: #333;
+        background-color: #192a56;
       }
 
       .card {
         position: relative;
-        width: 320px;
-        height: 350px;
-        background: white;
-        border-radius: 4px;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-      }
-
-      .card:before,
-      .card:after {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 3px;
-        background-color: white;
-        transition: .5s;
-        z-index: -1;
-      }
-
-      .card:hover:before {
-        transform: rotate(20deg);
-        box-shadow: 0 2px 20px rgba(0,0,0,0.2);
-    }
-
-    .card:hover:after {
-        transform: rotate(10deg);
-        box-shadow: 0 2px 20px rgba(0,0,0,0.2);
+        width: 300px;
+        height: 400px;
+        background-color: black;
+        box-shadow: 0px 30px 30px rgba(0,0,0,0.5);
       }
 
       .imgbox {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        bottom: 10px;
-        right: 10px;
-        background-color: #222;
-        transition: .5s;
-        z-index: 2;
-      }
-
-      .card:hover .imgbox {
-        bottom: 80px;
-      }
-
-      .details {
-        position: absolute;
-        bottom: 10px;
-        left: 10px;
-        right: 10px;
-        height: 60px;
-        text-align: center;
-      }
-
-      h2 {
-        font-weight: 600;
-        font-size: 20px;
-        color: #777;
-        text-transform: uppercase;
-      }
-
-      h2 span {
-        font-weight: 500;
-        font-size: 16px;
-        color: #f38695;
-      }
-
-      img {
-        position: absolute;
+        position: relative;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
+    }
+
+    img {
+        width: 100%;
+        height: 100%;
         object-fit: cover;
+      }
+
+
+      .content {
+          position: absolute;
+        bottom: 0px;
+        width: 80%;
+        height: 80px;
+        background-color: white;
+        left: 10%;
+        text-align: center;
+        overflow: hidden;
+        transition: .5s;
+      }
+
+      h3 {
+        font-size: 30px;
+        text-transform: uppercase;
+        margin: 25px;
+      }
+
+      p {
+        width: 80%;
+        margin: 10px auto;
+        font-size: 18px;
+        transition: .5s;
+        opacity: 0;
+      }
+
+      a {
+        text-decoration: none;
+        background-color: black;
+        color: white;
+        padding: 10px 15px;
+        display: inline-block;
+        margin-top: 10px;
+        transition: .5s;
+        opacity: 0;
+      }
+
+      .card:hover .content {
+        height: 100%;
+        width: 100%;
+        left: 0;
+      }
+
+      .card:hover p,
+      .card:hover a {
+        opacity: 1;
+        transition-delay: .5s;
       }
 
     </style>
@@ -114,8 +107,10 @@
         <div class="imgbox">
             <img src="img/kitten.jpg">
         </div>
-        <div class="details">
-            <h2>john doe<br><span>founder</span></h2>
+        <div class="content">
+            <h3>post title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, impedit Fugit voluptas doloribus amet voluptatem.</p>
+            <a href="#">read more</a>
         </div>
     </div>
 
