--- a/index.html
+++ b/index.html
@@ -24,95 +24,59 @@
         justify-content: center;
         align-items: center;
         font-family: "Raleway", sans-serif;
-        background-color: #192a56;
+        background-color: #3b3b3b;
       }
 
-      .card {
-        position: relative;
-        width: 300px;
-        height: 400px;
-        background-color: black;
-        box-shadow: 0px 30px 30px rgba(0,0,0,0.5);
+      ul {
+        display: flex;
       }
 
-      .imgbox {
-        position: relative;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-
-
-      .content {
-          position: absolute;
-        bottom: 0px;
-        width: 80%;
-        height: 80px;
-        background-color: white;
-        left: 10%;
-        text-align: center;
-        overflow: hidden;
-        transition: .5s;
-      }
-
-      h3 {
-        font-size: 30px;
-        text-transform: uppercase;
-        margin: 25px;
-      }
-
-      p {
-        width: 80%;
-        margin: 10px auto;
-        font-size: 18px;
-        transition: .5s;
-        opacity: 0;
-      }
-
-      a {
-        text-decoration: none;
-        background-color: black;
+      li {
+        list-style-type: none;
         color: white;
-        padding: 10px 15px;
-        display: inline-block;
-        margin-top: 10px;
-        transition: .5s;
+        font-size: 100px;
+        font-weight: bold;
+        letter-spacing: 10px;
+        transition: 2s;
+      }
+
+      ul:hover li {
+        transform: rotate(45deg) translateY(-200px);
         opacity: 0;
+        filter: blur(20px);
       }
 
-      .card:hover .content {
-        height: 100%;
-        width: 100%;
-        left: 0;
+      li:nth-child(1) {
+        transition-delay: 0;
       }
 
-      .card:hover p,
-      .card:hover a {
-        opacity: 1;
-        transition-delay: .5s;
+      li:nth-child(2) {
+        transition-delay: 0.4s;
+      }
+
+      li:nth-child(3) {
+        transition-delay: 0.8s;
+      }
+
+      li:nth-child(4) {
+        transition-delay: 1.2s;
+      }
+
+      li:nth-child(5) {
+        transition-delay: 1.6s;
       }
 
     </style>
   </head>
   <body>
 
-    <div class="card">
-        <div class="imgbox">
-            <img src="img/kitten.jpg">
-        </div>
-        <div class="content">
-            <h3>post title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, impedit Fugit voluptas doloribus amet voluptatem.</p>
-            <a href="#">read more</a>
-        </div>
-    </div>
+    <ul>
+        <li>S</li>
+        <li>M</li>
+        <li>O</li>
+        <li>K</li>
+        <li>Y</li>
+    </ul>
 
   </body>
 </html>
