--- a/index.html
+++ b/index.html
@@ -27,56 +27,33 @@
         background-color: #3b3b3b;
       }
 
-      ul {
-        display: flex;
+      h1 {
+        font-size: 120px;
+        color: #ccc;
+        text-transform: uppercase;
+        position: relative;
       }
 
-      li {
-        list-style-type: none;
-        color: white;
-        font-size: 100px;
-        font-weight: bold;
-        letter-spacing: 10px;
-        transition: 2s;
+      h1:before {
+        content: "text";
+        position: absolute;
+        top: 0;
+        left: 0;
+        color: #262626;
+        width: 0%;
+        overflow: hidden;
+        transition: all 7s;
       }
 
-      ul:hover li {
-        transform: rotate(45deg) translateY(-200px);
-        opacity: 0;
-        filter: blur(20px);
-      }
-
-      li:nth-child(1) {
-        transition-delay: 0;
-      }
-
-      li:nth-child(2) {
-        transition-delay: 0.4s;
-      }
-
-      li:nth-child(3) {
-        transition-delay: 0.8s;
-      }
-
-      li:nth-child(4) {
-        transition-delay: 1.2s;
-      }
-
-      li:nth-child(5) {
-        transition-delay: 1.6s;
+      h1:hover:before {
+        width: 100%;
       }
 
     </style>
   </head>
   <body>
 
-    <ul>
-        <li>S</li>
-        <li>M</li>
-        <li>O</li>
-        <li>K</li>
-        <li>Y</li>
-    </ul>
+    <h1>text</h1>
 
   </body>
 </html>
