--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,36 +25,88 @@
         justify-content: center;
         align-items: center;
         font-family: "Raleway", sans-serif;
-        background-color: #3b3b3b;
+        background-color: #dfe6e9;
       }
 
-      h1 {
-        font-size: 120px;
-        color: #ccc;
-        text-transform: uppercase;
+      .container {
+        display: flex;
+        text-align: center;
+      }
+
+      .icon {
+        width: 90px;
+        height: 90px;
+        background-color: #f1f1f1;
+        margin: 10px;
+        border-radius: 30%;
+        color: #10ac84;
+        box-shadow: 0 5px 15px -5px #00000070;
         position: relative;
-      }
-
-      h1:before {
-        content: "text";
-        position: absolute;
-        top: 0;
-        left: 0;
-        color: #262626;
-        width: 0%;
         overflow: hidden;
-        transition: all 7s;
-      }
+    }
 
-      h1:hover:before {
-        width: 100%;
-      }
+    .icon i {
+        line-height: 90px;
+        font-size: 25px;
+        transition: all .2s;
+    }
+
+    .icon:hover i {
+        transform: scale(1.3);
+        color: #f1f1f1;
+    }
+
+    .icon:before {
+        content: "";
+        position: absolute;
+        left: -110%;
+        top: 90%;
+        width: 120%;
+        height: 120%;
+        background-color: #10ac84;
+        transform: rotate(45deg);
+    }
+
+    .icon:hover:before {
+        animation: animation 0.7s 1 forwards;
+    }
+
+    @keyframes animation {
+        0% {
+            left: -110%;
+            top: 90%;
+        }
+        50% {
+            left: 15%;
+            top: -30%;
+        }
+        100% {
+            left: -10%;
+            top: -10%;
+        }
+    }
 
     </style>
   </head>
   <body>
 
-    <h1>text</h1>
+    <div class="container">
+        <a href="#" class="icon">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="#" class="icon">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#" class="icon">
+            <i class="fab fa-google"></i>
+        </a>
+        <a href="#" class="icon">
+            <i class="fab fa-youtube"></i>
+        </a>
+        <a href="#" class="icon">
+            <i class="fab fa-instagram"></i>
+        </a>
+    </div>
 
   </body>
 </html>
