creative rotated text border effect using CSS transforms

--- a/index.html
+++ b/index.html
@@ -25,87 +25,126 @@
         justify-content: center;
         align-items: center;
         font-family: "Raleway", sans-serif;
-        background-color: #dfe6e9;
       }
 
-      .container {
-        display: flex;
-        text-align: center;
-      }
-
-      .icon {
-        width: 90px;
-        height: 90px;
-        background-color: #f1f1f1;
-        margin: 10px;
-        border-radius: 30%;
-        color: #10ac84;
-        box-shadow: 0 5px 15px -5px #00000070;
+      .box {
         position: relative;
-        overflow: hidden;
-    }
+        width: 200px;
+        height: 200px;
+      }
 
-    .icon i {
-        line-height: 90px;
-        font-size: 25px;
-        transition: all .2s;
-    }
+      h1 {
+        color: #272727;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        font-size: 24px;
+        text-transform: uppercase;
+      }
 
-    .icon:hover i {
-        transform: scale(1.3);
-        color: #f1f1f1;
-    }
+      span {
+        color: #58c747;
+        font-size: 30px;
+      }
 
-    .icon:before {
+      .box:before {
         content: "";
         position: absolute;
-        left: -110%;
-        top: 90%;
-        width: 120%;
-        height: 120%;
-        background-color: #10ac84;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-top: 4px solid #58c747;
+        border-bottom: 4px solid #58c747;
+        transform: scaleX(0);
+        transition: .5s;
+    }
+
+    .box:hover:before {
+        transform: scaleX(1);
+
+      }
+
+      .box:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-left: 4px solid #58c747;
+        border-right: 4px solid #58c747;
+        transform: scaleY(0);
+        transition: .5s;
+      }
+
+      .box:hover:after {
+        transform: scaleY(1);
+        transition-delay: .5s;
+    }
+
+    .rotated {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: block;
         transform: rotate(45deg);
     }
 
-    .icon:hover:before {
-        animation: animation 0.7s 1 forwards;
+    .rotated:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-top: 4px solid #58c747;
+        border-bottom: 4px solid #58c747;
+        transform: scaleX(0);
+        transition: .5s;
     }
 
-    @keyframes animation {
-        0% {
-            left: -110%;
-            top: 90%;
-        }
-        50% {
-            left: 15%;
-            top: -30%;
-        }
-        100% {
-            left: -10%;
-            top: -10%;
-        }
+    .box:hover .rotated:before {
+        transform: scaleX(1);
+        transition-delay: 1s;
+
     }
+
+      .rotated:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-left: 4px solid #58c747;
+        border-right: 4px solid #58c747;
+        transform: scaleY(0);
+        transition: .5s;
+      }
+
+      .box:hover .rotated:after {
+          transform: scaleY(1);
+          transition-delay: 1.5s;
+      }
 
     </style>
   </head>
   <body>
 
-    <div class="container">
-        <a href="#" class="icon">
-            <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="#" class="icon">
-            <i class="fab fa-twitter"></i>
-        </a>
-        <a href="#" class="icon">
-            <i class="fab fa-google"></i>
-        </a>
-        <a href="#" class="icon">
-            <i class="fab fa-youtube"></i>
-        </a>
-        <a href="#" class="icon">
-            <i class="fab fa-instagram"></i>
-        </a>
+    <div class="box">
+        <span class="rotated"></span>
+        <h1>
+            CSS
+            <br>
+            <span>border</span>
+            <br>
+            hover
+            <br>
+            effect
+        </h1>
     </div>
 
   </body>
