--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         background-color: red;
         animation-name: moving;
         animation-duration: 3s;
+        animation-iteration-count: infinite;
+        animation-fill-mode: forwards;
+        animation-timing-function: ease-in-out;
       }
 
       @keyframes moving {
