--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
         height: 150px;
         background-color: red;
         animation-name: moving;
-        animation-duration: 3s;
+        animation-duration: 5s;
         animation-iteration-count: infinite;
         animation-fill-mode: forwards;
         animation-timing-function: ease-in-out;
+        animation-direction: alternate;
       }
 
       @keyframes moving {
