--- a/index.html
+++ b/index.html
@@ -38,26 +38,38 @@
         color: white;
         font-family: 'Inter', sans-serif;
         font-size: 40px;
-        padding: 40px 80px;
         border: 3px solid white;
-        transition: all .3s;
+        padding: 40px 80px;
+        position: relative;
+        overflow: hidden;
       }
 
-      a:hover {
-        border: 3px solid #f44336;
-        color: #f44336;
-        animation: shake 0.3s linear 1;
+      a:before {
+        content: '';
+        background-color: #f44336;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 120px;
+        height: 100%;
+        z-index: -1;
+        transform: skew(-15deg);
+        animation: moving 1.2s linear infinite;
+        transition: all .1s;
       }
 
-      @keyframes shake {
-        33% {
-            transform: rotate(10deg);
+      a:hover:before {
+        width: 100%;
+        animation: none;
+        transform: skew(0deg);
+      }
+
+      @keyframes moving {
+        from {
+            left: -120px;
         }
-        66% {
-            transform: rotate(-10deg);
-        }
-        100% {
-            transform: rotate(10deg);
+        to {
+            left: 100%;
         }
       }
 
