--- a/index.html
+++ b/index.html
@@ -30,79 +30,71 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #222;
+        background-color: #262626;
         font-family: 'Inter';
       }
 
-      ul {
-        margin: 0;
-        padding: 0;
-        display: flex;
+      .heart {
+        position: relative;
+        width: 100px;
+        height: 100px;
+        background-color: #ff3838;
+        transform: rotate(45deg);
+        animation: heartbeat 1.4s linear infinite;
       }
 
-      li {
-        list-style: none;
-        color: #484848;
-        font-size: 80px;
-        letter-spacing: 15px;
-        animation: lighting 1.4s linear infinite;
+      .heart:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #ff3838;
+        transform: translateY(-50%);
+        border-radius: 50%;
       }
 
-      @keyframes lighting {
+      .heart:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #ff3838;
+        transform: translateX(-50%);
+        border-radius: 50%;
+      }
+
+      @keyframes heartbeat {
         0% {
-            color: #484848;
-            text-shadow: none;
+            transform: rotate(45deg) scale(1);
         }
-        90% {
-            color: #484848;
-            text-shadow: none;
+        25% {
+            transform: rotate(45deg) scale(1);
+        }
+        30% {
+            transform: rotate(45deg) scale(1.4);
+        }
+        50% {
+            transform: rotate(45deg) scale(1.2);
+        }
+        70% {
+            transform: rotate(45deg) scale(1.4);
         }
         100% {
-            color: #fff900;
-            text-shadow: 0 0 7px #fff900, 0 0 50px #ff6c00;
+            transform: rotate(45deg) scale(1);
         }
-      }
-
-      ul li:nth-child(1) {
-        animation-delay: 0;
-      }
-
-      ul li:nth-child(2) {
-        animation-delay: 0.1s;
-      }
-      ul li:nth-child(3) {
-        animation-delay: 0.2s;
-      }
-      ul li:nth-child(4) {
-        animation-delay: 0.3s;
-      }
-      ul li:nth-child(5) {
-        animation-delay: 0.4s;
-      }
-      ul li:nth-child(6) {
-        animation-delay: 0.5s;
-      }
-      ul li:nth-child(7) {
-        animation-delay: 0.6s;
-      }
-      ul li:nth-child(8) {
-        animation-delay: 0.7s;
       }
 
     </style>
   </head>
   <body>
 
-    <ul>
-        <li>L</li>
-        <li>I</li>
-        <li>G</li>
-        <li>H</li>
-        <li>T</li>
-        <li>I</li>
-        <li>N</li>
-        <li>G</li>
-    </ul>
+    <div class="heart">
+
+    </div>
 
   </body>
 </html>
