--- a/index.html
+++ b/index.html
@@ -30,61 +30,26 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #262626;
+        background-color: #273c75;
         font-family: 'Inter';
       }
 
-      .heart {
-        position: relative;
-        width: 100px;
-        height: 100px;
-        background-color: #ff3838;
-        transform: rotate(45deg);
-        animation: heartbeat 1.4s linear infinite;
+      h1 {
+        font-size: 200px;
+        text-align: center;
+        text-transform: uppercase;
+        background: url(img/bg.jpg);
+        background-clip: text;
+        color: transparent;
+        animation: textbackground 20s linear infinite;
       }
 
-      .heart:before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #ff3838;
-        transform: translateY(-50%);
-        border-radius: 50%;
-      }
-
-      .heart:after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #ff3838;
-        transform: translateX(-50%);
-        border-radius: 50%;
-      }
-
-      @keyframes heartbeat {
-        0% {
-            transform: rotate(45deg) scale(1);
+      @keyframes textbackground {
+        from {
+            background-position: 0 0;
         }
-        25% {
-            transform: rotate(45deg) scale(1);
-        }
-        30% {
-            transform: rotate(45deg) scale(1.4);
-        }
-        50% {
-            transform: rotate(45deg) scale(1.2);
-        }
-        70% {
-            transform: rotate(45deg) scale(1.4);
-        }
-        100% {
-            transform: rotate(45deg) scale(1);
+        to {
+            background-position: 100% 100%;
         }
       }
 
@@ -92,9 +57,7 @@
   </head>
   <body>
 
-    <div class="heart">
-
-    </div>
+    <h1>css animation</h1>
 
   </body>
 </html>
