--- a/index.html
+++ b/index.html
@@ -30,34 +30,66 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #273c75;
+        background-color: #272727;
         font-family: 'Inter';
       }
 
-      h1 {
-        font-size: 200px;
-        text-align: center;
-        text-transform: uppercase;
-        background: url(img/bg.jpg);
-        background-clip: text;
-        color: transparent;
-        animation: textbackground 20s linear infinite;
+      ul {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        border-bottom: 10px solid white;
       }
 
-      @keyframes textbackground {
-        from {
-            background-position: 0 0;
+      ul li {
+        list-style: none;
+        width: 30px;
+        height: 30px;
+        background-color: white;
+        margin: 0 10px;
+        border-radius: 50%;
+        animation: jumping 0.8s linear infinite;
+      }
+
+      @keyframes jumping {
+        0% {
+            transform: translateY(0);
         }
-        to {
-            background-position: 100% 100%;
+        50% {
+            transform: translateY(-150px);
         }
+        100% {
+            transform: translateY(0);
+        }
+      }
+
+      ul li:nth-child(1) {
+        animation-delay: 0.45s;
+      }
+      ul li:nth-child(2) {
+        animation-delay: 0.6s;
+      }
+      ul li:nth-child(3) {
+        animation-delay: 0.3s;
+      }
+      ul li:nth-child(4) {
+        animation-delay: 0s;
+      }
+      ul li:nth-child(5) {
+        animation-delay: 0.15s;
       }
 
     </style>
   </head>
   <body>
 
-    <h1>css animation</h1>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 
   </body>
 </html>
