--- a/index.html
+++ b/index.html
@@ -32,64 +32,33 @@
         align-items: center;
         background-color: #272727;
         font-family: 'Inter';
+        background: url(img/castle.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
       }
 
-      ul {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        border-bottom: 10px solid white;
+      .rain {
+        width: 100%;
+        height: 100%;
+        background: url(img/rain.png);
+        background-size: cover;
+        animation: rain .3s linear infinite;
       }
 
-      ul li {
-        list-style: none;
-        width: 30px;
-        height: 30px;
-        background-color: white;
-        margin: 0 10px;
-        border-radius: 50%;
-        animation: jumping 0.8s linear infinite;
-      }
-
-      @keyframes jumping {
+      @keyframes rain {
         0% {
-            transform: translateY(0);
-        }
-        50% {
-            transform: translateY(-150px);
+            background-position: 0 0;
         }
         100% {
-            transform: translateY(0);
+            background-position: -20% -100%;
         }
-      }
-
-      ul li:nth-child(1) {
-        animation-delay: 0.45s;
-      }
-      ul li:nth-child(2) {
-        animation-delay: 0.6s;
-      }
-      ul li:nth-child(3) {
-        animation-delay: 0.3s;
-      }
-      ul li:nth-child(4) {
-        animation-delay: 0s;
-      }
-      ul li:nth-child(5) {
-        animation-delay: 0.15s;
       }
 
     </style>
   </head>
   <body>
 
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
+    <div class="rain"></div>
 
   </body>
 </html>
