--- a/index.html
+++ b/index.html
@@ -34,92 +34,74 @@
       }
 
       ul {
+        margin: 0;
+        padding: 0;
         display: flex;
       }
 
       ul li {
         list-style: none;
-        width: 120px;
-        height: 120px;
-        margin: 0 20px;
-        border: 2px solid #0a3d62;
-        border-radius: 50%;
-        transition: all .5s;
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
+        font-size: 80px;
+        letter-spacing: 20px;
+        animation: loading 3s linear infinite;
       }
 
-      ul li i {
-        font-size: 48px;
-        color: #0a3d62;
-        transition: all .5s;
-      }
-
-      ul li:before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #0a3d62;
-        border-radius: 50%;
-        z-index: -1;
-        transition: all .5s;
-        opacity: 0;
-      }
-
-      ul li:hover:before {
-        opacity: 1;
-        transform: scale(.8);
-      }
-
-      ul li:hover i {
-        color: white;
-      }
-
-      ul li:after {
-        content: "";
-        position: absolute;
-        top: -2px;
-        left: -2px;
-        width: 100%;
-        height: 100%;
-        background-color: transparent;
-        border: 2px dashed #2e86de;
-        border-radius: 50%;
-        z-index: -1;
-        transition: all .5s;
-        opacity: 0;
-      }
-
-      @keyframes rotating {
+      @keyframes loading {
         0% {
-            transform: scale(0.9) rotate(0deg);
+            color: red;
+            transform: translateX(-50px);
+            letter-spacing: 20px;
+            opacity: 0;
+        }
+        10% {
+            opacity: 1;
+        }
+        50% {
+            letter-spacing: -20px;
+            opacity: 1;
         }
         100% {
-            transform: scale(0.9) rotate(360deg);
+            color: blue;
+            transform: translateX(50px);
+            letter-spacing: 20px;
+            opacity: 0;
         }
       }
 
-      ul li:hover:after {
-        opacity: 1;
-        animation: rotating 10s linear infinite;
+      ul li:nth-child(1) {
+        animation-delay: 0;
       }
-
+      ul li:nth-child(2) {
+        animation-delay: 0.2s;
+      }
+      ul li:nth-child(3) {
+        animation-delay: 0.2s;
+      }
+      ul li:nth-child(4) {
+        animation-delay: 0.4s;
+      }
+      ul li:nth-child(5) {
+        animation-delay: 0.6s;
+      }
+      ul li:nth-child(6) {
+        animation-delay: 0.8s;
+      }
+      ul li:nth-child(7) {
+        animation-delay: 1s;
+      }
 
     </style>
   </head>
   <body>
 
     <ul>
-        <li><i class="fas fa-heart"></i></li>
-        <li><i class="fas fa-glass-martini"></i></li>
-        <li><i class="fas fa-globe"></i></li>
-        <li><i class="fas fa-gift"></i></li>
+        <li>L</li>
+        <li>O</li>
+        <li>A</li>
+        <li>D</li>
+        <li>I</li>
+        <li>N</li>
+        <li>G</li>
     </ul>
 
   </body>
